# GTFlow

./: Dockerfile  README.md  pyproject.toml  requirements.txt
gtflow/: cli.py  config.py  cost.py  logging.py  rate_limiter.py
gtflow/gui/: app.py
gtflow/models/: schemas.py
gtflow/pipeline/: axial_coder.py  codebook_builder.py  gioia_view.py  negatives_scanner.py  open_coder.py  report.py  report_html.py  saturation.py  segmenter.py  selective_coder.py
gtflow/prompts/: axial_zh.yaml  codebook_zh.yaml  open_coding_zh.yaml  selective_zh.yaml
gtflow/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  openai_compatible.py
gtflow/utils/: file_io.py  json_utils.py  text_utils.py
